# paperclip

./: .BTCAAAAA-27721_COMPLETION.md  .BTCAAAAA-27734_COMPLETION.md  .BTCAAAAA-27758_IMPLEMENTATION_COMPLETE.md  .BTCAAAAA-27759_IMPLEMENTATION_VERIFICATION.md  .BTCAAAAA-27763_COMPLETION_VERIFICATION.md  .BTCAAAAA-27768_COMPLETION_VERIFICATION.md  .BTCAAAAA-27770_COMPLETION_VERIFICATION.md  .BTCAAAAA-27774_OPERATIONAL_STATUS.md  .BTCAAAAA-27775_COMPLETION_SUMMARY.md  .BTCAAAAA-27775_COMPLETION_VERIFICATION.md  .BTCAAAAA-27780_COMPLETION_VERIFICATION.md  .BTCAAAAA-27796_COMPLETION_VERIFICATION.md  .BTCAAAAA-27805_COMPLETION_VERIFICATION.md  .BTCAAAAA-27807_COMPLETION_VERIFICATION.md  .BTCAAAAA-27818_VERIFICATION_COMPLETE.md  .BTCAAAAA-27836_COMPLETION_SUMMARY.md  .BTCAAAAA-27836_OPERATIONAL_VERIFICATION.md  .BTCAAAAA-27841_READY_FOR_CLOSURE.md  .BTCAAAAA-27898_HEARTBEAT_COMPLETION.md  .BTCAAAAA-27924_COMPLETION_VERIFICATION.md  .BTCAAAAA-27936_OPERATIONAL_VERIFICATION.md  .BTCAAAAA-27956_COMPLETION.md  .BTCAAAAA-27956_VERIFICATION_STATUS.md  .BTCAAAAA-27970_COMPLETION.md  .BTCAAAAA-27973_STATUS.md  .BTCAAAAA-27974_COMPLETION.md  .BTCAAAAA-27992_VERIFICATION_COMPLETE.md  .BTCAAAAA-27994_COMPLETION.md  .BTCAAAAA-27997_COMPLETION.md  .BTCAAAAA-28000_FREEZE_BLOCKER.md  .BTCAAAAA-28013_COMPLETION.md  .BTCAAAAA-28015_FREEZE_BLOCKER.md  .BTCAAAAA-28017_COMPLETION.md  .BTCAAAAA-28019_FREEZE_BLOCKER.md  .BTCAAAAA-28024_AUTHORIZATION_BLOCKER.md  .BTCAAAAA-28079_COMPLETION.md  .BTCAAAAA-28995_IMPLEMENTATION_COMPLETE.md  .BTCAAAAA-29120_COMPLETION.md  .BTCAAAAA-29127_OPERATIONAL_VERIFICATION.md  .BTCAAAAA-29304_COMPLETION_STATUS.md  (+272 more)
.db-snapshots/: strategies_20260528T0855Z_pre_cleanup.json
.githooks/: post-commit
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: qa-locked-module-exception.md
.github/workflows/: apply-branch-protection.yml  backfill-close-stale-runs.yml  backup-deadman-switch-monitor.yml  backup-deadman-switch.yml  backup-to-drive.yml  blast-radius-monitor.yml  blast-radius-worker.yml  branch-reaper.yml  closure-gate-routine.yml  deadman-switch-local-monitor.yml  deadman-switch-monitor.yml  dep-graph-refresh.yml  freeze-lift-evidence.yml  impact-gate-polling-daemon.yml  impact-gate-scan-done.yml  impact-gate-scan-health.yml  impact-gate-worker.yml  lint.yml  lock-exception-signoff.yml  lock-gate-nightly-alert.yml  lock-gate.yml  lock-module-verify.yml  merge-dispatch-routine.yml  opencode-watchdog.yml  paperclip-recovery-health-check.yml  paperclip-recovery-monitor.yml  pr-scope-check.yml  provider-budget-monitor.yml  qa-fact-check-pipeline.yml  rclone-oauth-health.yml  recovery-monitor-health-check.yml  session-end-smoke.yml  sync-trace-issues.yml  sync-trace-requirements.yml  sync-trace-test-cases.yml  test.yml  token-gap-escalation-blocker-verification.yml  touch-index-backfill.yml  touch-index-bug-worker.yml  touch-index-fr-worker.yml  (+4 more)
.hindsight/: uiengineer_memory.json
alembic/: README  env.py
archived/: CLINE_RESEARCH_RULES.md  TRADING_QUANT_ML_RESOURCES.md  advanced_signal_results.json  all_blocks_walkforward_summary.json  apply_reversal_logic.py  apply_reversal_to_remaining.sh  archive_building_blocks.py
config/: optimizer_001_hod_rejection.yaml  optimizer_002_lod_rejection.yaml
data/: impact_gate_muted_results.json
deploy/: README-testnet-dry-run.md  itm_testnet_config.yaml
doc/: CLI.md
docs/: BACKUP.md  BTCAAAAA-1747-branch-protection-ci-evidence.md  BTCAAAAA-1824-observation-log.md  BTCAAAAA-27654-React-UI-Phase1-Report.md  BTCAAAAA-34828-decision-log-verification.md  BTCAAAAA-7258-root-cause-analysis.md  BTCAAAAA-7283-blocker-report.md  CLI_REFERENCE.md  COMPLETE_SESSION_BREAKTHROUGH.md  CURRENT_PATTERN_SYSTEM_EXPLAINED.md  CURRENT_STATUS.md  DAY3_COMPLETE.md  DAY8_9_COMPLETE.md  DAYS_1-4_COMPLETE.md  DEPLOYMENT_OPTIONS.md  DEVELOPER_GUIDE.md  EDGE_IMPROVEMENT_RESEARCH.md  EXPERT_MODE_ITERATION3_ANALYSIS.md  EXPERT_MODE_MW_FIX_COMPLETE.md  EXPERT_MODE_STATISTICAL_FIX_RESEARCH.md  FIBONACCI_ZONES_ANALYSIS.md  GROUND_TRUTH_VALIDATION_FRAMEWORK.md  Ground_Truth_1hr_Trend_Identification_concept.md  IMPACT_GATE_POLLING_DAEMON.md  IMPACT_GATE_POLLING_QUICK_START.md  IMPROVED_ML_TRAINING_STRATEGY.md  ITERATION2_SESSION_COMPLETE.md  ITERATION_SESSION_SUMMARY.md  LAYER_THRESHOLD_ANALYSIS.md  MIGRATION_TO_V3_PLAN.md  NAUTILUS_TRADER_ANALYSIS.md  NAUTILUS_TRADER_API_EVENTS.md  NESTED_TREND_DETECTION_COMPLETE.md  OAUTH_SETUP.md  OPTIMIZER_DESIGN.md  OPTIMIZER_IMPLEMENTATION_COMPLETE.md  OUTCOME_BASED_MODEL_COMPLETE.md  OUTSTANDING_DEVELOPMENT_ARCHIVED.md  PATTERN_COVERAGE_RESEARCH.md  PHASE1_INSTITUTIONAL_FEATURES_COMPLETE.md  (+62 more)
scripts/: README-opencode-watchdog.md  RECOVERY.md  add_ui_visible_to_zero_point_signals.py  agent-premerge-check.sh  agent-safedev.sh  analyze_signal_occurrences.py  analyze_trade_3_1_forensic.py  apply-branch-protection.sh  apply_block_classifications.py  backfill_close_stale_runs.py  backfill_touch_index.py  backtest_edge_improvement.py  backtest_iteration2_simplified.py  backtest_mw_patterns.py  backup-deadman-switch.service  backup-deadman-switch.timer  backup-routine.service  backup-routine.timer  backup_deadman_switch.py  backup_deadman_switch_monitor.py  batch_optimize_core_blocks.py  batch_optimize_ict_blocks.py  batch_optimize_patterns.py  batch_test_metadata.py  batch_test_nonpattern_signals.py  batch_test_patterns_parallel.py  blast_radius_cli.py  blast_radius_monitor.py  branch-reaper.sh  btc-spend  bump-version.sh  classify_and_label_blocks.py  clean-stale-approvals.sql  cleanup_tmp_artifacts.sh  closure_gate_routine.py  complete_remaining_4_blocks.py  data_catalog_setup.py  deadman_switch_local_monitor.py  deadman_switch_monitor.py  debug_confluence_at_breakdown.py  (+157 more)
server/: package.json
strategy_definitions/: ema_trend_continuation.json  m_pattern_reversal.json
tests/: test_closure_gate_routine.py  test_fabrication_detector.py  test_pr_scope_check_routine.py  test_provider_monitor.py
user_strategies/: current_strategy.json  hod_rejection.json  hod_rejection_2.json  rsi_vwap_50_asia_rejection.json
(+2707 files in other folders)
