[tool.poetry]
name = "optimizer-v3"
version = "0.1.0"
description = "Institutional-grade trading strategy optimizer"
authors = ["Stack Alerts <info@stackalerts.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nautilus-trader = "^1.0.0"
PyQt6 = "^6.4.0"
PyQt6-Charts = "^6.4.0"
psutil = "^5.9.0"
psycopg2-binary = "^2.9.5"
SQLAlchemy = "^2.0.0"
alembic = "^1.9.0"
numpy = "^1.23.0"
pandas = "^1.5.0"
scipy = "^1.9.0"
plotly = "^5.13.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-qt = "^4.2.0"
pytest-xdist = "^3.2.0"
pytest-timeout = "^2.1.0"
pytest-mock = "^3.10.0"
memory-profiler = "^0.61.0"
black = "^22.12.0"
isort = "^5.11.0"
mypy = "^1.0.0"
pylint = "^2.15.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^8.7.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.pylint.messages_control]
max-line-length = 88
disable = ["C0111", "C0103"]
