[tool.poetry]
name = "optimizer-v3"
version = "0.1.0"
description = "Institutional-grade trading strategy optimizer"
authors = ["Stack Alerts <info@stackalerts.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nautilus-trader = "^1.0.0"
PyQt6 = "^6.4.0"
PyQt6-Charts = "^6.4.0"
psutil = "^5.9.0"
psycopg2-binary = "^2.9.5"
SQLAlchemy = "^2.0.0"
alembic = "^1.9.0"
numpy = "^1.23.0"
pandas = "^1.5.0"
scipy = "^1.9.0"
plotly = "^5.13.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-qt = "^4.2.0"
pytest-xdist = "^3.2.0"
pytest-timeout = "^2.1.0"
pytest-mock = "^3.10.0"
memory-profiler = "^0.61.0"
reportlab = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.0"
mypy = "^1.0.0"
pylint = "^2.15.0"
python-dotenv = "^0.21.0"
anthropic = "^0.100.0"
openai = "^2.36.0"
httpx = "^0.28.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^8.7.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
# Coverage is scoped by .coveragerc which excludes Qt UI modules and
# NautilusTrader/psutil/jinja2-dependent code not runnable in headless CI.
# Threshold of 20% reflects actual achievable coverage from strategy_builder
# unit tests (validation, persistence, core) against the non-UI src modules.
# Target: raise incrementally as test coverage expands.
addopts = "-ra -q --cov=src --cov-config=.coveragerc --cov-report=term-missing --cov-fail-under=20"
testpaths = ["tests"]
# Ensure src/ is always on sys.path so all test modules can import from src/
# regardless of conftest.py load order (fixes namespace-package import ordering).
pythonpath = ["src"]
markers = [
    "timeout: mark a test with a timeout in seconds (requires pytest-timeout)",
]

[tool.pylint.messages_control]
max-line-length = 88
disable = ["C0111", "C0103"]

[tool.ruff]
line-length = 88
# Runtime is Python 3.13; py312 is the minimum that parses the f-string quoting
# syntax used in src/detectors/building_blocks/patterns/*.py (PEP 701, Python 3.12+).
target-version = "py312"

[tool.ruff.lint]
# DTZ rules enforce timezone-aware datetimes.
# DTZ003: ban datetime.utcnow() — use datetime.now(timezone.utc) instead.
# T201: ban print() calls — use structured logging (structlog) instead.
#   Added after BTCAAAAA-198 migrated all 1,783 print() calls to structured logging.
#   Any new print() in src/ will fail CI immediately.
select = ["DTZ003", "T201"]
